--- a/Changes
+++ b/Changes
@@ -1,5 +1,29 @@
 Revision history for Catalyst-View-ByCode
 
+0.10    2010-04-01
+        * bumped MooseX::AttributeHelpers to Version 0.23, as 0.22 fails
+          Thanks, CPAN Testers!
+        * tried Dist::Zilla as a packaging system -- looks much easier to use.
+        * split up the process() method into render() and delivery to allow
+          my $html = $c->forward('View::ByCode', render => [qw(list of files)]);
+          without pollution of stash.
+        
+        2010-03-31
+        * added a handy shortcut for checked, disabled, multiple, readonly
+          and selected attributes rendering a true value to the 
+          attribute's name
+          eg: disabled => 1 will become disabled="disabled" in HTML
+        * added a params() sub that allows to specify a series of
+          param tags with one call.
+        
+        2010-03-29
+        * fixed a bug that made block-definitions defined in 'old-scholl'
+          fashion unable to read attr()-values. Only declare-defined
+          blocks could read attr()-values.
+          Added a test to verify the improvement.
+          Bug reported by Phil Soehnlein
+        * added a yield-test
+
 0.09    2010-03-27
         * updated test requirements
         
